--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "maxtt-billing-api",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
-  "main": "server.js",
+  "engines": { "node": ">=18" },
   "scripts": {
     "start": "node server.js"
   },
