--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,26 @@
-DATABASE_URL=
-FRONTEND_URL=
-MRP_PER_ML=4.5
-GST_RATE=0.18
+# ==== Core platform ====
 PORT=10000
+DATABASE_URL=postgres://<user>:<pass>@<host>:5432/<db>?sslmode=require
+
+# ==== CORS ====
+# Comma-separated list of origins allowed to call this API
+ALLOWED_ORIGINS=https://maxtt-billing-tools.onrender.com,https://tools.maxtt.in
+
+# ==== Referrals / Seal & Earn (SE-LIVE) ====
+# Base URL of the referrals API (already set in Render)
+REF_API_BASE_URL=https://maxtt-referrals-api-pv5c.onrender.com
+# HMAC signing secret (TEMP value acceptable for now; upgrade before prod)
+REF_SIGNING_KEY=TS!MAXTT-2025
+# Optional timeout (ms) for referrals calls
+REFERRALS_TIMEOUT_MS=5000
+# Feature toggle (true/false). If false, referral hook becomes a no-op.
+REFERRALS_ENABLED=true
+
+# ==== Optional legacy/test wiring (kept for compatibility) ====
+# If you still use the passthrough test route /__wire/referrals/test with an API key
+REF_API_WRITER_KEY=
+
+# ==== App defaults / business flags (as needed) ====
+# Example placeholders if you standardize later:
+# DEFAULT_HSN=35069999
+# DEFAULT_GST_RATE=18
